# clay3ds

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: CC2DConfig.cmake.in  Clay.cmake  Clay3DSConfig.cmake.in
examples/: CMakeLists.txt  custom_fonts.c  minimal.c  two_screens.c
examples/custom_fonts/: main.c
examples/custom_fonts/romfs/: comic-sans.bcfnt
examples/dual_screen/: main.c
include/: clay3ds.h  clay_citro2d_renderer.h
